{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 11,
  "lineage": "c2155259-44da-529f-9eca-a5a7d757c996",
  "resources": [
    {
      "module": "module.api_gateway",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797701898566:vpc/vpc-0daee22351af4fa25",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08e50457123d413d5",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06796781407e1ccda",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0daee22351af4fa25",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0230df92550204f57",
            "owner_id": "797701898566",
            "tags": {
              "Name": "foodtrails-dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.api_gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797701898566:security-group/sg-01eb5f9e6fd84a49f",
            "description": "Security group for API Gateway VPC endpoint",
            "egress": [],
            "id": "sg-01eb5f9e6fd84a49f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "restaurant-dev-api-gateway-endpoint",
            "name_prefix": "",
            "owner_id": "797701898566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "restaurant-dev-api-gateway-endpoint-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "restaurant-dev-api-gateway-endpoint-sg",
              "Service": "restaurant",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daee22351af4fa25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api_gateway.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.api_gateway",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "api_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797701898566:vpc-endpoint/vpce-0854efc110d8d90d6",
            "dns_entry": [
              {
                "dns_name": "vpce-0854efc110d8d90d6-fizby4un.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0854efc110d8d90d6-fizby4un-us-east-1b.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0854efc110d8d90d6-fizby4un-us-east-1c.execute-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "execute-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0477326309W5SHKLPZDX"
              },
              {
                "dns_name": "*.execute-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0477326309W5SHKLPZDX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0854efc110d8d90d6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00fe12a31cc439567",
              "eni-0c3795e5c0bae98eb"
            ],
            "owner_id": "797701898566",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01eb5f9e6fd84a49f"
            ],
            "service_name": "com.amazonaws.us-east-1.execute-api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.4.47",
                "subnet_id": "subnet-0802e43fc6b871c4a"
              },
              {
                "ipv4": "10.0.5.86",
                "subnet_id": "subnet-04dd266d0d20b1f2f"
              }
            ],
            "subnet_ids": [
              "subnet-04dd266d0d20b1f2f",
              "subnet-0802e43fc6b871c4a"
            ],
            "tags": {
              "Name": "restaurant-dev-api-gateway-endpoint"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "restaurant-dev-api-gateway-endpoint",
              "Service": "restaurant",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0daee22351af4fa25"
          },
          "dependencies": [
            "module.api_gateway.aws_security_group.api_gateway_endpoint",
            "module.api_gateway.data.aws_subnets.private",
            "module.api_gateway.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.restaurant_svc_lambda",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797701898566:vpc/vpc-0daee22351af4fa25",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08e50457123d413d5",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06796781407e1ccda",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0daee22351af4fa25",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0230df92550204f57",
            "owner_id": "797701898566",
            "tags": {
              "Name": "foodtrails-dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.restaurant_svc_lambda",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797701898566:security-group/sg-0a7793728801e3c4c",
            "description": "Security group for Lambda function restaurant-svc",
            "egress": [],
            "id": "sg-0a7793728801e3c4c",
            "ingress": [],
            "name": "restaurant-dev-restaurant-svc-lambda",
            "name_prefix": "",
            "owner_id": "797701898566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "restaurant-dev-restaurant-svc-lambda-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "restaurant-dev-restaurant-svc-lambda-sg",
              "Service": "restaurant",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0daee22351af4fa25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.restaurant_svc_ecr.aws_ecr_repository.this",
            "module.restaurant_svc_lambda.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}